infra/cdk.out-email/UpSycle-NetworkStack.template.json
{
 "Description": "UpSycle: VPC (RDS-only private subnet, no NAT Gateway) + S3 Gateway VPC Endpoint",
 "Resources": {
  "UpSycleVpcFD672AAC": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "upsycle-vpc"
     },
     {
      "Key": "project",
      "Value": "UpSycle"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "UpSycle-NetworkStack/UpSycleVpc/Resource"
   }
  },
  "UpSycleVpcpublicSubnet1Subnet3AE4A1B3": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-2a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "UpSycle-NetworkStack/UpSycleVpc/publicSubnet1"
     },
     {
      "Key": "project",
      "Value": "UpSycle"
     }
    ],
    "VpcId": {
     "Ref": "UpSycleVpcFD672AAC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "UpSycle-NetworkStack/UpSycleVpc/publicSubnet1/Subnet"
   }
  },
  "UpSycleVpcpublicSubnet1RouteTableA8CE81F6": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "UpSycle-NetworkStack/UpSycleVpc/publicSubnet1"
     },
     {
      "Key": "project",
      "Value": "UpSycle"
     }
    ],
    "VpcId": {
     "Ref": "UpSycleVpcFD672AAC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "UpSycle-NetworkStack/UpSycleVpc/publicSubnet1/RouteTable"
   }
  },
  "UpSycleVpcpublicSubnet1RouteTableAssociation62828C14": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "UpSycleVpcpublicSubnet1RouteTableA8CE81F6"
    },
    "SubnetId": {
     "Ref": "UpSycleVpcpublicSubnet1Subnet3AE4A1B3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "UpSycle-NetworkStack/UpSycleVpc/publicSubnet1/RouteTableAssociation"
   }
  },
  "UpSycleVpcpublicSubnet1DefaultRouteD665AC3C": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "UpSycleVpcIGW3049C0CD"
    },
    "RouteTableId": {
     "Ref": "UpSycleVpcpublicSubnet1RouteTableA8CE81F6"
    }
   },
   "DependsOn": [
    "UpSycleVpcVPCGWDCEBE00B"
   ],
   "Metadata": {
    "aws:cdk:path": "UpSycle-NetworkStack/UpSycleVpc/publicSubnet1/DefaultRoute"
   }
  },
  "UpSycleVpcpublicSubnet2Subnet892F7275": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-2b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "UpSycle-NetworkStack/UpSycleVpc/publicSubnet2"
     },
     {
      "Key": "project",
      "Value": "UpSycle"
     }
    ],
    "VpcId": {
     "Ref": "UpSycleVpcFD672AAC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "UpSycle-NetworkStack/UpSycleVpc/publicSubnet2/Subnet"
   }
  },
  "UpSycleVpcpublicSubnet2RouteTable59E487A1": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "UpSycle-NetworkStack/UpSycleVpc/publicSubnet2"
     },
     {
      "Key": "project",
      "Value": "UpSycle"
     }
    ],
    "VpcId": {
     "Ref": "UpSycleVpcFD672AAC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "UpSycle-NetworkStack/UpSycleVpc/publicSubnet2/RouteTable"
   }
  },
  "UpSycleVpcpublicSubnet2RouteTableAssociation67FEDF1E": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "UpSycleVpcpublicSubnet2RouteTable59E487A1"
    },
    "SubnetId": {
     "Ref": "UpSycleVpcpublicSubnet2Subnet892F7275"
    }
   },
   "Metadata": {
    "aws:cdk:path": "UpSycle-NetworkStack/UpSycleVpc/publicSubnet2/RouteTableAssociation"
   }
  },
  "UpSycleVpcpublicSubnet2DefaultRouteDA07F183": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "UpSycleVpcIGW3049C0CD"
    },
    "RouteTableId": {
     "Ref": "UpSycleVpcpublicSubnet2RouteTable59E487A1"
    }
   },
   "DependsOn": [
    "UpSycleVpcVPCGWDCEBE00B"
   ],
   "Metadata": {
    "aws:cdk:path": "UpSycle-NetworkStack/UpSycleVpc/publicSubnet2/DefaultRoute"
   }
  },
  "UpSycleVpcrdsprivateisolatedSubnet1SubnetABEC0E53": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-2a",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "rds-private-isolated"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "UpSycle-NetworkStack/UpSycleVpc/rds-private-isolatedSubnet1"
     },
     {
      "Key": "project",
      "Value": "UpSycle"
     }
    ],
    "VpcId": {
     "Ref": "UpSycleVpcFD672AAC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "UpSycle-NetworkStack/UpSycleVpc/rds-private-isolatedSubnet1/Subnet"
   }
  },
  "UpSycleVpcrdsprivateisolatedSubnet1RouteTable7F6C436D": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "UpSycle-NetworkStack/UpSycleVpc/rds-private-isolatedSubnet1"
     },
     {
      "Key": "project",
      "Value": "UpSycle"
     }
    ],
    "VpcId": {
     "Ref": "UpSycleVpcFD672AAC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "UpSycle-NetworkStack/UpSycleVpc/rds-private-isolatedSubnet1/RouteTable"
   }
  },
  "UpSycleVpcrdsprivateisolatedSubnet1RouteTableAssociationC1270563": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "UpSycleVpcrdsprivateisolatedSubnet1RouteTable7F6C436D"
    },
    "SubnetId": {
     "Ref": "UpSycleVpcrdsprivateisolatedSubnet1SubnetABEC0E53"
    }
   },
   "Metadata": {
    "aws:cdk:path": "UpSycle-NetworkStack/UpSycleVpc/rds-private-isolatedSubnet1/RouteTableAssociation"
   }
  },
  "UpSycleVpcrdsprivateisolatedSubnet2SubnetD3773A0C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-west-2b",
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "rds-private-isolated"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "UpSycle-NetworkStack/UpSycleVpc/rds-private-isolatedSubnet2"
     },
     {
      "Key": "project",
      "Value": "UpSycle"
     }
    ],
    "VpcId": {
     "Ref": "UpSycleVpcFD672AAC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "UpSycle-NetworkStack/UpSycleVpc/rds-private-isolatedSubnet2/Subnet"
   }
  },
  "UpSycleVpcrdsprivateisolatedSubnet2RouteTable0971306E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "UpSycle-NetworkStack/UpSycleVpc/rds-private-isolatedSubnet2"
     },
     {
      "Key": "project",
      "Value": "UpSycle"
     }
    ],
    "VpcId": {
     "Ref": "UpSycleVpcFD672AAC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "UpSycle-NetworkStack/UpSycleVpc/rds-private-isolatedSubnet2/RouteTable"
   }
  },
  "UpSycleVpcrdsprivateisolatedSubnet2RouteTableAssociation75898D95": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "UpSycleVpcrdsprivateisolatedSubnet2RouteTable0971306E"
    },
    "SubnetId": {
     "Ref": "UpSycleVpcrdsprivateisolatedSubnet2SubnetD3773A0C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "UpSycle-NetworkStack/UpSycleVpc/rds-private-isolatedSubnet2/RouteTableAssociation"
   }
  },
  "UpSycleVpcIGW3049C0CD": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "upsycle-vpc"
     },
     {
      "Key": "project",
      "Value": "UpSycle"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "UpSycle-NetworkStack/UpSycleVpc/IGW"
   }
  },
  "UpSycleVpcVPCGWDCEBE00B": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "UpSycleVpcIGW3049C0CD"
    },
    "VpcId": {
     "Ref": "UpSycleVpcFD672AAC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "UpSycle-NetworkStack/UpSycleVpc/VPCGW"
   }
  },
  "UpSycleVpcRestrictDefaultSecurityGroupCustomResource16A27B8C": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "UpSycleVpcFD672AAC",
      "DefaultSecurityGroup"
     ]
    },
    "Account": "506145782106"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "UpSycle-NetworkStack/UpSycleVpc/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "UpSycleVpcS3GatewayEndpoint13EAC38A": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "RouteTableIds": [
     {
      "Ref": "UpSycleVpcrdsprivateisolatedSubnet1RouteTable7F6C436D"
     },
     {
      "Ref": "UpSycleVpcrdsprivateisolatedSubnet2RouteTable0971306E"
     },
     {
      "Ref": "UpSycleVpcpublicSubnet1RouteTableA8CE81F6"
     },
     {
      "Ref": "UpSycleVpcpublicSubnet2RouteTable59E487A1"
     }
    ],
    "ServiceName": {
     "Fn::Join": [
      "",
      [
       "com.amazonaws.",
       {
        "Ref": "AWS::Region"
       },
       ".s3"
      ]
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "upsycle-vpc"
     },
     {
      "Key": "project",
      "Value": "UpSycle"
     }
    ],
    "VpcEndpointType": "Gateway",
    "VpcId": {
     "Ref": "UpSycleVpcFD672AAC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "UpSycle-NetworkStack/UpSycleVpc/S3GatewayEndpoint/Resource"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:aws:ec2:us-west-2:506145782106:security-group/",
             {
              "Fn::GetAtt": [
               "UpSycleVpcFD672AAC",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "UpSycle-NetworkStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-506145782106-us-west-2",
     "S3Key": "02b51ab524e7bcf8f477de3e71e5f9a72e448301b26ba62e9e75a14f9c55a093.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs24.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "UpSycle-NetworkStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.02b51ab524e7bcf8f477de3e71e5f9a72e448301b26ba62e9e75a14f9c55a093",
    "aws:asset:property": "Code"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/3WNQW+DMAyFf0vvIes47M7QNO1UBBPXygS3cwsOih1QVfW/T2hsOU2yZL/P79m5zV+e7X4Hi2Suv2YDdfbeKLirgUWO6HJ7bydnyhO3VWmq2A3kmtgx6srSVPuo+AndgIknVoh4R6Dk+c9sqkAzKKYbH6wYGPUdFBe4bU83VaiC+xqR1Wykndwb95Mn1s36Kx+mRvExODRlFPVjkif+Z1UFP1OP4RUETSGC2iicic9r5hB1ivow7Hu0F3ma871da3cRoixEVhrR1j/9GxoZwytUAQAA"
   },
   "Metadata": {
    "aws:cdk:path": "UpSycle-NetworkStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "VpcId": {
   "Value": {
    "Ref": "UpSycleVpcFD672AAC"
   }
  },
  "ExportsOutputFnGetAttUpSycleVpcFD672AACCidrBlock9ED621F0": {
   "Value": {
    "Fn::GetAtt": [
     "UpSycleVpcFD672AAC",
     "CidrBlock"
    ]
   },
   "Export": {
    "Name": "UpSycle-NetworkStack:ExportsOutputFnGetAttUpSycleVpcFD672AACCidrBlock9ED621F0"
   }
  },
  "ExportsOutputRefUpSycleVpcFD672AAC4D33AFFC": {
   "Value": {
    "Ref": "UpSycleVpcFD672AAC"
   },
   "Export": {
    "Name": "UpSycle-NetworkStack:ExportsOutputRefUpSycleVpcFD672AAC4D33AFFC"
   }
  },
  "ExportsOutputRefUpSycleVpcrdsprivateisolatedSubnet1SubnetABEC0E5395C7362A": {
   "Value": {
    "Ref": "UpSycleVpcrdsprivateisolatedSubnet1SubnetABEC0E53"
   },
   "Export": {
    "Name": "UpSycle-NetworkStack:ExportsOutputRefUpSycleVpcrdsprivateisolatedSubnet1SubnetABEC0E5395C7362A"
   }
  },
  "ExportsOutputRefUpSycleVpcrdsprivateisolatedSubnet2SubnetD3773A0CDC9B4EED": {
   "Value": {
    "Ref": "UpSycleVpcrdsprivateisolatedSubnet2SubnetD3773A0C"
   },
   "Export": {
    "Name": "UpSycle-NetworkStack:ExportsOutputRefUpSycleVpcrdsprivateisolatedSubnet2SubnetD3773A0CDC9B4EED"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
